src/objects/ChatterActionConfiguration__mdt.object
<CustomObject>
    <fields>
        <fullName>ChatterActionContactTypeLabel__c</fullName>
        <label>Chatter Action Contact Type Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChatterActionsHandlerAPI__c</fullName>
        <description>System field. If it necessary - defines a handler which extend the base &apos;Chatter Action Contact&apos; related logic.</description>
        <label>Chatter Actions Handler API</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DefaultRecipientDetailsSection__c</fullName>
        <description>To be able to use a &apos;Chatter Action Contact&apos; record without any recipient and show Email/Assignment details section by default.</description>
        <label>Default Recipient Details Section</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Assignment</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>InfoSectionLabel__c</fullName>
        <label>Info Section Label</label>
        <picklist>
            <picklistValues>
                <fullName>Assign to 3rd Level</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assign to 2nd Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TestCAInfoSectionLabel</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NumberOfColumnsPerRow__c</fullName>
        <label>Number Of Columns Per Row</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfSteps__c</fullName>
        <label>Number Of Steps</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UsesChatterActionContactConfig__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Uses Chatter Action Contact Config</label>
        <type>Checkbox</type>
    </fields>
    <label>Chatter Action Configuration</label>
</CustomObject>